Added link to scommons-websql repo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     <section class="main-content">
       {{ content }}
       
-      <h3>Contributors</h3>
+      <h3>Maintainers</h3>
       <codersrank-widget username="viktor-podzigun" style="width: 320px"></codersrank-widget>
 
       <footer class="site-footer">
